--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGO_URL=mongodb+srv://servivetech:uiyUYshB6pV0Vp3f@chat-app.g6ays.mongodb.net/?retryWrites=true&w=majority&appName=chat-app
+MONGO_UR=mongodb+srv://servivetech:uiyUYshB6pV0Vp3f@chat-app.g6ays.mongodb.net/?retryWrites=true&w=majority&appName=chat-app
+MONGO_URL=mongodb://localhost:27017
 JWT_SECRET=sekhar
